# DSView

./: CMakeLists.txt
DSView/: DSView.qrc
DSView/pv/: mainwindow.cpp  mainwindow.h  sigsession.cpp  sigsession.h  storesession.h
DSView/pv/dialogs/: mcplogdlg.cpp  mcplogdlg.h
DSView/pv/mcp/: mcpserver.cpp  mcpserver.h  mcptools.cpp
DSView/pv/toolbars/: logobar.cpp  logobar.h  mcpbar.cpp  mcpbar.h
mcp/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
mcp/dsview_helper/: decode.c  decode.h  main.c
mcp/dsview_mcp/: server.py
